--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 ./week2/KORAT/
+/week2/KORAT/110522101_lab2.zip
+/week2/KORAT/110522101-林文涵.mp4
+/week2/KORAT/110522101-林文涵.png
+/week2/KORAT/jenkins.war
+/week2/KORAT/KORAT_installer_v2.6.5 (1).exe
+/week2/KORAT/KORAT使用手冊-v2.6.5.pdf
+/week2/KORAT/lab2- korat capture replay system tests (1).docx
+/week2/KORAT/license.txt
+/week2/KORAT/Project1/Case1/Case1.tas
+/week2/KORAT/Project1/Case1/evt/001.evt
+/week2/KORAT/Project1/Case1/evt/002.evt
+/week2/KORAT/Project1/Case1/image/cd.png
+/week2/KORAT/Project1/Case1/image/CMD.png
+/week2/KORAT/Project1/Case1/image/CMD_mask.png
+/week2/KORAT/Project1/config.json
+/week2/KORAT/Project1/Project1.tasproj
+/week2/KORAT/Project1/scheduler/SystemGen.sch
